force-app/main/default/objects/Study_Event_Relation__c/Study_Event_Relation__c.object-meta.xml
<CustomObject>
    <description>The attendees or rooms assigned for study events.</description>
    <label>Study Event Relation</label>
    <nameField>
        <displayFormat>SER-{00000}</displayFormat>
        <label>Study Event Relation #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Study Event Relations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>