force-app/main/default/objects/Study_Event_Relation__c/fields/Allow_Conflict__c.field-meta.xml
<CustomField>
    <fullName>Allow_Conflict__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will skip the record from double booking validation.</description>
    <inlineHelpText>This will skip the record from double booking validation.</inlineHelpText>
    <label>Allow Conflict</label>
    <type>Checkbox</type>
</CustomField>