force-app/main/default/objects/Study_Event_Relation__c/fields/Check_In__c.field-meta.xml
<CustomField>
    <fullName>Check_In__c</fullName>
    <description>The check in time.</description>
    <inlineHelpText>The check in time.</inlineHelpText>
    <label>Check In</label>
    <type>Time</type>
</CustomField>