force-app/main/default/objects/Study_Event_Relation__c/fields/Check_Out__c.field-meta.xml
<CustomField>
    <fullName>Check_Out__c</fullName>
    <description>The check out time.</description>
    <inlineHelpText>The check out time.</inlineHelpText>
    <label>Check Out</label>
    <type>Time</type>
</CustomField>