force-app/main/default/objects/Study_Event_Relation__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The attendee or participant.</description>
    <inlineHelpText>The attendee or participant.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Study Event Relations</relationshipLabel>
    <relationshipName>Study_Event_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>