force-app/main/default/objects/Study_Event_Relation__c/fields/Duration_Mins__c.field-meta.xml
<CustomField>
    <fullName>Duration_Mins__c</fullName>
    <description>Attended duration in minute.</description>
    <formula>( Check_Out__c - Check_In__c ) / 60 / 1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Attended duration in minute.</inlineHelpText>
    <label>Duration (Mins)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>