force-app/main/default/objects/Study_Event_Relation__c/fields/Event_End_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Event_End_Datetime__c</fullName>
    <formula>Study_Event__r.End__c</formula>
    <label>Event End Date/Time</label>
    <type>DateTime</type>
</CustomField>