force-app/main/default/objects/Study_Event_Relation__c/fields/Event_Start_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Event_Start_Datetime__c</fullName>
    <formula>Study_Event__r.Start__c</formula>
    <label>Event Start Date/Time</label>
    <type>DateTime</type>
</CustomField>