force-app/main/default/objects/Study_Event_Relation__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The room or location.</description>
    <inlineHelpText>The room or location.</inlineHelpText>
    <label>Facility</label>
    <referenceTo>Facility__c</referenceTo>
    <relationshipLabel>Study Event Relations</relationshipLabel>
    <relationshipName>Study_Event_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>