force-app/main/default/objects/Study_Event_Relation__c/fields/Has_Conflict__c.field-meta.xml
<CustomField>
    <fullName>Has_Conflict__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the contact or facility has conflict with other event.</description>
    <inlineHelpText>Indicates that the contact or facility has conflict with other event.</inlineHelpText>
    <label>Has Conflict</label>
    <type>Checkbox</type>
</CustomField>