force-app/main/default/objects/Study_Event_Relation__c/fields/Individual_Session_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Individual_Session_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Act as the attendance for the related session enrollment.</description>
    <inlineHelpText>Act as the attendance for the related session enrollment.</inlineHelpText>
    <label>Individual Session Enrollment</label>
    <referenceTo>Individual_Session_Enrollment__c</referenceTo>
    <relationshipLabel>Study Event Relations</relationshipLabel>
    <relationshipName>Study_Event_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>