force-app/main/default/objects/Study_Event_Relation__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The primary contact that owns the event.</description>
    <inlineHelpText>The primary contact that owns the event.</inlineHelpText>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>