force-app/main/default/objects/Study_Event_Relation__c/fields/Relation_Name__c.field-meta.xml
<CustomField>
    <fullName>Relation_Name__c</fullName>
    <formula>IF(
	NOT(ISBLANK( Contact__c )), 
	Contact__r.FirstName + &apos; &apos; +  Contact__r.LastName,
	IF ( NOT(ISBLANK( Facility__c )),
		Facility__r.Name,
		&apos;&apos;
	)
)</formula>
    <label>Relation Name</label>
    <type>Text</type>
</CustomField>