force-app/main/default/objects/Study_Event_Relation__c/fields/Relation_Type__c.field-meta.xml
<CustomField>
    <fullName>Relation_Type__c</fullName>
    <description>The relation type either Faculty, Student or Facility.</description>
    <formula>IF(
        NOT(ISBLANK( Individual_Session_Enrollment__c )),

        Individual_Session_Enrollment__r.RecordType.DeveloperName,

        IF(
            NOT(ISBLANK( Contact__c )), 
	    TEXT( Contact__r.Contact_Type__c ),
	    IF ( NOT(ISBLANK( Facility__c )),
		    &apos;Facility&apos;,
		    &apos;&apos;
	    )
         )
	
)</formula>
    <inlineHelpText>The relation type either Faculty, Student or Facility.</inlineHelpText>
    <label>Relation Type</label>
    <type>Text</type>
</CustomField>