force-app/main/default/objects/Study_Event_Relation__c/fields/Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Response_Date__c</fullName>
    <description>The datetime of when the attendee responded.</description>
    <inlineHelpText>The datetime of when the attendee responded.</inlineHelpText>
    <label>Response Date</label>
    <type>DateTime</type>
</CustomField>