force-app/main/default/objects/Study_Event_Relation__c/fields/Study_Event__c.field-meta.xml
<CustomField>
    <fullName>Study_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Event</label>
    <referenceTo>Study_Event__c</referenceTo>
    <relationshipLabel>Study Event Relations</relationshipLabel>
    <relationshipName>Study_Event_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>