force-app/main/default/objects/Study_Event_Relation__c/validationRules/Validate_Contact_or_Facility.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Contact_or_Facility</fullName>
    <active>true</active>
    <description>Ensure that the study event relation can only link to either contact or facility.</description>
    <errorConditionFormula>(NOT(ISBLANK( Contact__c )) &amp;&amp; NOT(ISBLANK( Facility__c ))) &amp;&amp;
(ISBLANK( Contact__c ) &amp;&amp; ISBLANK( Facility__c ))</errorConditionFormula>
    <errorMessage>Please select either a contact or a facility.</errorMessage>
</ValidationRule>